--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,8 +7,8 @@ provisioner:
   roles_path: ~/chef-repo/roles
 platforms:
  # - name: ubuntu-12.04
- # - name: centos-6.5
-   - name: chef/centos-6.5
+  - name: centos-6.5
+ #  - name: chef/centos-6.5
 
 suites:
   - name: default
